# otopoiesis

./: .gitignore  .taplo.toml  Cargo.toml  otopoiesis.code-workspace  package-lock.json  package.json  readme.md  webpack.config.js
.github/actions/cache_cargo/: action.yml
.github/workflows/: build_native.yml  build_web.yml  format.yml
otopoiesis_lang/: Cargo.toml
otopoiesis_lang/src/: atomic.rs  builtin_fn.rs  compiler.rs  environment.rs  error.rs  expr.rs  lib.rs  parameter.rs  parser.rs  runtime.rs  types.rs  typing.rs  value.rs
otopoiesis_lang/src/builtin_fn/: loadwav.rs
otopoiesis_lang/src/parser/: error.rs  lexer.rs  stringifier.rs  tokens.rs
otopoiesis_minieditor/: Cargo.toml
otopoiesis_minieditor/src/: app.rs  main.rs
src/: action.rs  app.rs  audio.rs  audio_processor.rs  cli.rs  component.rs  data.rs  gui.rs  lib.rs  main.rs  parameter.rs  script.rs  utils.rs  waveform.rs
src/app/: filemanager.rs
src/audio/: component.rs  generator.rs  oscillator.rs  region.rs  renderer.rs  timeline.rs  track.rs
src/audio/generator/: constant.rs  fileplayer.rs  noise.rs  oscillator.rs  script.rs
src/audio/renderer/: nannou.rs
src/audio_processor/: oscillator.rs
src/data/: expr.rs  generator.rs  meta.rs  region.rs  script.rs  toplevel.rs  track.rs  types.rs
src/data/script/: builtin_fn.rs
src/gui/: app.rs  generator.rs  menu.rs  parameter.rs  region.rs  script.rs  timeline.rs  track.rs  transport.rs  waveform.rs
src/gui/generator/: image.rs  waveform.rs
src/gui/region/: region_handle.rs  regionfilter.rs
src/gui/region/regionfilter/: fadeinout.rs  replicate.rs
src/parameter/: atomicfloat_helper.rs
src/script/: builtin_fn.rs  environment.rs  expr.rs  test.rs  ui.rs  value.rs
src/script/builtin_fn/: loadwav.rs
src/utils/: atomic.rs  lockfree_container.rs  logger.rs
static/: index.html  index.js
test/project/: test_project.json
