[package]
name = "otopoiesis"
version = "0.1.0"
authors = ["Tomoya Matsuura <me@matsuuratomoya.com>"]
edition = "2021"
resolver = "2"
description = "a constructive audio programming environment with timeline-based view"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = ["dep:clap", "dep:dirs"]
web = [
    "dep:wasm-bindgen-futures",
    "dep:wee_alloc",
    "dep:console_error_panic_hook",
]

[dependencies]
cpal = { version = "0.15.2"}
egui = "0.20.0"
eframe = { version = "0.20.0" }
# to resolve conflict versions used between egui and nannou_audio(cpal)
web-sys = { version = "0.3.60", features = ["console"] }
ringbuf = "*"
atomic_float = "*"
serde = { version = "*", features = ["rc"] }
serde_json = "*"
serde_with = "2.1.0"
undo = "0.47.*"
rfd = "0.11"

# image = { version = "0.24", default-features = false, features = [
#     "jpeg",
#     "png",
# ] }

egui_extras = { version = "0.20.0", features = ["image"] }

symphonia = { version = "0.5.2", features = ["wav"] }
clap = { version = "4.3.19", features = ["derive"], optional = true }
dirs = { version = "5.0", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }
wasm-bindgen-futures = { version = "0.4.33", optional = true }
wee_alloc = { version = "0.4.5", optional = true }


[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = "0.2.12"

[dev-dependencies]
wasm-bindgen-test = { version = "0.2" }
