[workspace]
members = ["otopoiesis_lang", "otopoiesis_minieditor"]

[package]
name = "otopoiesis"
version = "0.1.0"
authors = ["Tomoya Matsuura <me@matsuuratomoya.com>"]
repository = "https://github.com/tomoyanonymous/otopoiesis"
license = "MPL 2.0"
edition = "2021"
resolver = "2"
description = "a constructive audio programming environment with timeline-based view"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# mimium-rs = { git = "https://github.com/tomoyanonymous/mimium-rs.git", branch = "otopoiesis" }
otopoiesis_lang = { path = "./otopoiesis_lang" }
ringbuf = "*"
serde = { version = "*", features = ["rc"] }
serde_json = "*"
serde_with = "2.1.0"
undo = "0.47.*"
rfd = "0.11"

egui = "0.23.*"
eframe = { version = "0.23.*" }
egui_extras = { version = "0.23.*", features = ["image"] }
symphonia = { version = "0.5.2", features = ["wav"] }
log = "0.4.20"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = { version = "0.15.2" }
clap = { version = "4.3.19", features = ["derive"] }
rand = "0.8.5"
dirs = "5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
cpal = { version = "0.15.2", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
wee_alloc = "0.4.5"
console_error_panic_hook = "0.1.6"

[target.'cfg(target_arch = "wasm32")']
wasm-opt = false

[target.'cfg(all(target_arch = "wasm32"))'.dev_dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = "0.2.12"
